--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Cncal\\DbToMigration\\" : "src/"
+            "Cncal\\Getui\\" : "src/"
         }
     }
 }
